--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Pokédex</title>
   </head>
-  <body>
+  <body class="element">
     <img class="title" src="./public/assets/pokédex_titre.png">
     <div class="poke-container" id="poke-container"></div>
     <script src="script.js"></script>
